S20SS2FAVE-77 Adding text and image to main page - CSS for image is still not centered, attempting to fix

--- a/application/static/stylesheet.css
+++ b/application/static/stylesheet.css
@@ -74,7 +74,7 @@
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 5px;
+	padding: 20px;
 }
 
 @media screen and (max-width: 600px) {
